--- a/angular.json
+++ b/angular.json
@@ -77,7 +77,7 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/jest:run",
           "options": {
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "angularoid-tmtc"
+    }
+  },
+  "defaultProject": "angularoid-tmtc",
+  "cli": {
+    "analytics": "4dfc93db-c0f0-4a41-9cd2-925787156e02"
+  }
 }
