--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,16 +1,11 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/spec",
-    "types": [
-      "jasmine",
-      "node"
-    ]
+    "module": "commonjs",
+    "outDir": "../out-tsc/spec",
+    "types": ["jest"]
   },
-  "files": [
-    "src/test.ts",
-    "src/polyfills.ts"
-  ],
+  "files": ["src/polyfills.ts"],
   "include": [
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
