commit from day 3

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "importHelpers": true,
     "target": "es2019",
     "types": ["jest"],
+    "emitDecoratorMetadata": true,
     "lib": [
       "es2018",
       "dom"
